<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/font_grey">
        <ImageView
            android:id="@+id/iv_goods"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/borggreve"/>
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/common_margin"/>
        <TextView
            android:id="@+id/tv_goods_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:text="NAME"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="@dimen/common_margin"/>
        <ImageView
            android:id="@+id/iv_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/empty_star"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="@dimen/common_margin"/>
    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/font_black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/common_margin"/>
            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_price"
                app:layout_constraintLeft_toLeftOf="@+id/tv_price"/>
            <ImageView
                android:id="@+id/iv_shop"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/shoplist"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="@dimen/common_margin"/>
            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/line_color"
                app:layout_constraintTop_toTopOf="@id/iv_shop"
                app:layout_constraintBottom_toBottomOf="@id/iv_shop"
                app:layout_constraintRight_toLeftOf="@id/iv_shop"
                android:layout_marginRight="@dimen/common_margin"/>
        </android.support.constraint.ConstraintLayout>
        <include layout="@layout/line_gap"/>
        <TextView
            android:id="@+id/tv_more_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more_info"
            android:textSize="@dimen/goods_font_size"
            android:textColor="@color/font_black"
            android:layout_margin="@dimen/common_margin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@color/line_color"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/give_order"
            android:textSize="@dimen/goods_font_size"
            android:textColor="@color/font_black"
            android:layout_margin="@dimen/common_margin"/>
        <include layout="@layout/line_gap"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textSize="@dimen/goods_font_size"
            android:textColor="@color/font_black"
            android:layout_margin="@dimen/common_margin"/>
        <include layout="@layout/line_gap"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uninterested"
            android:textSize="@dimen/goods_font_size"
            android:textColor="@color/font_black"
            android:layout_margin="@dimen/common_margin"/>
        <include layout="@layout/line_gap"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more_sale_info"
            android:textSize="@dimen/goods_font_size"
            android:textColor="@color/font_black"
            android:layout_margin="@dimen/common_margin"/>
        <include layout="@layout/line_gap"/>
    </LinearLayout>

</LinearLayout>
